--- a/src/client/index.html
+++ b/src/client/index.html
@@ -28,6 +28,7 @@
 					<div class="card-content white-text">
 						<span class="card-title" id="usernamesCards"></span>
 						<div id="mycards"></div>
+						<div id="mychances"></div>
 					</div>
 				</div>
 			</div>
